--- a/.travis.yml
+++ b/.travis.yml
@@ -7,12 +7,9 @@ env:
     - SEGFAULT_SIGNALS=all
 matrix:
   include:
-    - python: '3.6'
-      env:
-        - TOXENV=check
-    - python: '3.6'
-      env:
+    - env:
         - TOXENV=docs
+      python: '3.6'
     - env:
         - TOXENV=py35,codecov
       python: '3.5'
@@ -25,13 +22,6 @@ matrix:
     - env:
         - TOXENV=py38,codecov
       python: '3.8'
-    - env:
-        - TOXENV=pypy,codecov
-      python: 'pypy'
-    - env:
-        - TOXENV=pypy3,codecov
-        - TOXPYTHON=pypy3
-      python: 'pypy3'
 before_install:
   - python --version
   - uname -a
