--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,9 @@ env:
 matrix:
   include:
     - env:
+        - TOXENV=docs
+      python: '3.7'
+    - env:
         - TOXENV=py37,codecov
       python: '3.7'
     - env:
