changing some build settings

--- a/setup.cfg
+++ b/setup.cfg
@@ -29,8 +29,8 @@ testpaths =
 [tool:isort]
 force_single_line = True
 line_length = 120
-known_first_party = sa-pathfinding
+known_first_party = sa_pathfinding
 default_section = THIRDPARTY
-forced_separate = test_sa-pathfinding
+forced_separate = test_sa_pathfinding
 not_skip = __init__.py
 skip = .tox,ci/templates
