--- a/.coveragerc
+++ b/.coveragerc
@@ -1,7 +1,9 @@
 [paths]
 source =
-   src/*
+   src
    */site-packages
+omit =
+    src/sa_pathfinding/gui.py
 
 [run]
 branch = true
@@ -15,4 +17,6 @@ parallel = true
 [report]
 show_missing = true
 precision = 2
-omit = *migrations*
+omit = 
+    *migrations*
+    src/sa_pathfinding/gui.py
