fixed pytest command in tox.ini and tweaked .coveragerc

--- a/tox.ini
+++ b/tox.ini
@@ -34,8 +34,9 @@ deps =
     pytest
     pytest-travis-fold
     pytest-cov
+    coverage
 commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv tests}
+    pytest --cov-config=.coveragerc --cov=sa_pathfinding tests/
 
 [testenv:check]
 deps =
