--- a/tox.ini
+++ b/tox.ini
@@ -6,8 +6,7 @@ deps =
 skip_install = true
 commands =
     python ci/bootstrap.py --no-env
-passenv =
-    *
+passenv = *
 ; a generative tox configuration, see: https://tox.readthedocs.io/en/latest/config.html#generative-envlist
 
 [tox]
@@ -25,10 +24,9 @@ basepython =
     py38: {env:TOXPYTHON:python3.8}
     {bootstrap,clean,check,report,codecov}: {env:TOXPYTHON:python3}
 setenv =
-    PYTHONPATH={toxinidir}/tests
-    PYTHONUNBUFFERED=yes
-passenv =
-    *
+    PYTHONPATH = {toxinidir}/tests
+    PYTHONUNBUFFERED = yes
+passenv = DISPLAY
 usedevelop = false
 deps =
     pytest
@@ -72,7 +70,7 @@ commands =
 deps = coverage
 skip_install = true
 commands =
-    coverage report
+    coverage --omit sa_pathfinding/gui.py report
     coverage html
 
 [testenv:clean]
